@@ -2,7 +2,8 @@ shady-KISS-skin History
 -------------------------------------------
 
 2015-04-09:
-- Increased fontsize of current and nexttitle in displaychannel if subtitles are empty 
+- Increased fontsize of current and nexttitle in displaychannel if subtitles are empty
+- Fixed nonsense in displaymenurecordings 
 
 2015-04-08:
 - Reworked messagesbars
